# routes/auth.js
@@ -1,5 +1,5 @@
 const { Router } = require('express');
-const { login, googleSignIn,  } = require('../controllers/auth');
+const {  googleSignIn, loginUser, loginDoctor,  } = require('../controllers/auth');
 const { validated } = require('../middlewares/validated');
 const { check } = require('express-validator');
 const { validateDNI } = require('../helpers/user-helpers/user-db-validators');
@@ -10,11 +10,14 @@ const router = Router();
 
 
 
-router.post('/login',[validateDNI(),
+router.post('/loginUser',[validateDNI(),
 check('password',"passsword obligatorio").not().isEmpty(),
-validated], login);
+validated], loginUser);
 
-
+router.post('/loginDoctor',[validateDNI(),
+    check('password',"passsword obligatorio").not().isEmpty(),
+    validated], loginDoctor);
+    
 
 
 router.post('/google',[ check('id_token',"it_token es necesario").not().isEmpty(),
